tests/fixtures/invalid/pow_str_bytes_dict.py
# Cannot call pow() with Str, Bytes, Dict[str, int]
x = pow("hello", b"hello", {"a": 1})
